2005-02-08  Christian Fredrik Kalager Schaller  <uraeus@gnome.org>

	* COPYING: adding with clause
	* COPYING.LIB: update with some comments about playlist-lib
	* license_change: add document outlining the license change
	* src/bacon-message-connection.c: adding clause to all files
	* src/bacon-message-connection.h:
	* src/bacon-v4l-selection.c:
	* src/bacon-v4l-selection.h:
	* src/bacon-video-widget-gst.c:
	* src/bacon-video-widget.h: fix copyright header
	* src/egg-recent-item.c:
	* src/egg-recent-model.c:
	* src/egg-recent-view-gtk.c:
	* src/egg-recent-view.c:
	* src/scrsaver.c: fix copyright header as original code is gone
	* src/totem-disc.c:
	* src/totem-gromit.c:
	* src/totem-interface.c:
	* src/totem-preferences.c:
	* src/totem-preferences.h:
	* src/totem-private.h:
	* src/totem-properties-main.c:
	* src/totem-properties-view.c:
	* src/totem-properties-view.h:
	* src/totem-remote.c:
	* src/totem-remote.h:
	* src/totem-stock-icons.c:
	* src/totem-stock-icons.h:
	* src/totem-video-thumbnailer.c:
	* src/totem.c:
	* src/totem.h:
	* src/vanity.c:
	* src/video-dev.c:
	* src/video-dev.h:

2005-02-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (main): use g_type_init so that
	the thumbnailer can work without a DISPLAY

2005-02-07  Bastien Nocera  <hadess@hadess.net>

	* src/disc-test.c: (main): print out the list of connected drives
	if we get an error trying to figure out the type of a disc

2005-02-07  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_set_media_device):
	* src/totem-preferences.c: (on_combo_entry1_changed):
	Guard against NULL being passed to the xine-lib backend for
	the media device (Closes: #166536)

2005-02-04  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_video_property),
	(bacon_video_widget_set_video_property):
	  Fix colorbalance getting/setting between runs (#163490).
