@@ -18,83 +18,74 @@
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
 
   <child>
-    <widget class="GtkFrame" id="tefw_frame">
+    <widget class="GtkButton" id="tefw_fs_exit_button">
       <property name="visible">True</property>
-      <property name="label_xalign">0</property>
-      <property name="label_yalign">0.5</property>
-      <property name="shadow_type">GTK_SHADOW_IN</property>
+      <property name="can_focus">True</property>
+      <property name="relief">GTK_RELIEF_NORMAL</property>
+      <property name="focus_on_click">True</property>
 
       <child>
-	<widget class="GtkButton" id="tefw_fs_exit_button">
-	  <property name="visible">True</property>
-	  <property name="can_focus">True</property>
-	  <property name="relief">GTK_RELIEF_NORMAL</property>
-	  <property name="focus_on_click">True</property>
+        <widget class="GtkAlignment" id="tefw_alignment">
+          <property name="visible">True</property>
+          <property name="xalign">0.5</property>
+          <property name="yalign">0.5</property>
+          <property name="xscale">0</property>
+          <property name="yscale">0</property>
+          <property name="top_padding">0</property>
+          <property name="bottom_padding">0</property>
+          <property name="left_padding">0</property>
+          <property name="right_padding">0</property>
 
-	  <child>
-	    <widget class="GtkAlignment" id="tefw_alignment">
-	      <property name="visible">True</property>
-	      <property name="xalign">0.5</property>
-	      <property name="yalign">0.5</property>
-	      <property name="xscale">0</property>
-	      <property name="yscale">0</property>
-	      <property name="top_padding">0</property>
-	      <property name="bottom_padding">0</property>
-	      <property name="left_padding">0</property>
-	      <property name="right_padding">0</property>
+          <child>
+            <widget class="GtkHBox" id="tefw_hbox">
+              <property name="visible">True</property>
+              <property name="homogeneous">False</property>
+              <property name="spacing">2</property>
 
-	      <child>
-		<widget class="GtkHBox" id="tefw_hbox">
-		  <property name="visible">True</property>
-		  <property name="homogeneous">False</property>
-		  <property name="spacing">2</property>
+              <child>
+                <widget class="GtkImage" id="tefw_image">
+                  <property name="visible">True</property>
+                  <property name="stock">gtk-zoom-100</property>
+                  <property name="icon_size">4</property>
+                  <property name="xalign">0.5</property>
+                  <property name="yalign">0.5</property>
+                  <property name="xpad">0</property>
+                  <property name="ypad">0</property>
+                </widget>
+                <packing>
+                  <property name="padding">0</property>
+                  <property name="expand">False</property>
+                  <property name="fill">False</property>
+                </packing>
+              </child>
 
-		  <child>
-		    <widget class="GtkImage" id="tefw_image">
-		      <property name="visible">True</property>
-		      <property name="stock">gtk-zoom-100</property>
-		      <property name="icon_size">4</property>
-		      <property name="xalign">0.5</property>
-		      <property name="yalign">0.5</property>
-		      <property name="xpad">0</property>
-		      <property name="ypad">0</property>
-		    </widget>
-		    <packing>
-		      <property name="padding">0</property>
-		      <property name="expand">False</property>
-		      <property name="fill">False</property>
-		    </packing>
-		  </child>
-
-		  <child>
-		    <widget class="GtkLabel" id="tefw_label">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Exit Fullscreen</property>
-		      <property name="use_underline">True</property>
-		      <property name="use_markup">False</property>
-		      <property name="justify">GTK_JUSTIFY_LEFT</property>
-		      <property name="wrap">False</property>
-		      <property name="selectable">False</property>
-		      <property name="xalign">0.5</property>
-		      <property name="yalign">0.5</property>
-		      <property name="xpad">0</property>
-		      <property name="ypad">0</property>
-		      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-		      <property name="width_chars">-1</property>
-		      <property name="single_line_mode">False</property>
-		      <property name="angle">0</property>
-		    </widget>
-		    <packing>
-		      <property name="padding">0</property>
-		      <property name="expand">False</property>
-		      <property name="fill">False</property>
-		    </packing>
-		  </child>
-		</widget>
-	      </child>
-	    </widget>
-	  </child>
-	</widget>
+              <child>
+                <widget class="GtkLabel" id="tefw_label">
+                  <property name="visible">True</property>
+                  <property name="label" translatable="yes">Exit Fullscreen</property>
+                  <property name="use_underline">True</property>
+                  <property name="use_markup">False</property>
+                  <property name="justify">GTK_JUSTIFY_LEFT</property>
+                  <property name="wrap">False</property>
+                  <property name="selectable">False</property>
+                  <property name="xalign">0.5</property>
+                  <property name="yalign">0.5</property>
+                  <property name="xpad">0</property>
+                  <property name="ypad">0</property>
+                  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+                  <property name="width_chars">-1</property>
+                  <property name="single_line_mode">False</property>
+                  <property name="angle">0</property>
+                </widget>
+                <packing>
+                  <property name="padding">0</property>
+                  <property name="expand">False</property>
+                  <property name="fill">False</property>
+                </packing>
+              </child>
+            </widget>
+          </child>
+        </widget>
       </child>
     </widget>
   </child>
@@ -1712,7 +1703,7 @@ AC3 Passthrough</property>
 </widget>
 
 <widget class="GtkWindow" id="totem_controls_window">
-  <property name="border_width">6</property>
+  <property name="border_width">0</property>
   <property name="title" translatable="yes"></property>
   <property name="type">GTK_WINDOW_POPUP</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
