@@ -1,3 +1,13 @@
+2005-02-11  William Jon McCann  <mccann@jhu.edu>
+
+	* src/totem.c (popup_timeout_remove) 
+	(on_video_motion_notify_event, on_mouse_click_fullscreen) 
+	(totem_callback_connect): Use glib timeout funcs.
+
+	* data/totem.glade: Remove unneeded frame around Exit Fullscreen
+	button.  Make fullscreen control buttons go to the edge of the
+	screen. (Closes #166509)
+
 2005-02-08  Christian Fredrik Kalager Schaller  <uraeus@gnome.org>
 
 	* COPYING: adding with clause
